cmake_minimum_required(VERSION 3.10)
project(MyWebServer)
include_directories(${CMAKE_SOURCE_DIR}/include)
file(GLOB SOURCES "${CMAKE_SOURCE_DIR}/src/*.cpp")
list(REMOVE_ITEM SOURCES "${CMAKE_SOURCE_DIR}/src/main.cpp")
add_executable(server "${CMAKE_SOURCE_DIR}/src/main.cpp" ${SOURCES})
if(EXISTS "${CMAKE_SOURCE_DIR}/test/main.cpp")
	add_executable(server_test "${CMAKE_SOURCE_DIR}/test/main.cpp" ${SOURCES})
endif()